--- a/08-lorem-ipsum/setup/src/index.css
+++ b/08-lorem-ipsum/setup/src/index.css
@@ -134,6 +134,7 @@ p {
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
+  margin: 5px;
 }
 .btn:hover {
   color: var(--clr-primary-5);
