--- a/Other_projects_withReactTailw/next-app_1/src/styles/globals.css
+++ b/Other_projects_withReactTailw/next-app_1/src/styles/globals.css
@@ -6,3 +6,7 @@ html {
   scroll-behavior: smooth;
   font-family: 'Roboto', sans-serif;
 }
+
+.custom-img {
+  background-image: url('https://images.unsplash.com/photo-1564574662330-73fb2940ff5d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80');
+}
